@@ -1885,10 +1885,6 @@ operator|<
 name|bufferIn
 operator|.
 name|length
-operator|-
-name|bufferIn
-operator|.
-name|offset
 condition|)
 block|{
 name|buffer
@@ -1902,10 +1898,6 @@ argument_list|,
 name|bufferIn
 operator|.
 name|length
-operator|-
-name|bufferIn
-operator|.
-name|offset
 argument_list|)
 expr_stmt|;
 block|}
@@ -1920,10 +1912,6 @@ argument_list|,
 name|bufferIn
 operator|.
 name|length
-operator|-
-name|bufferIn
-operator|.
-name|offset
 argument_list|)
 expr_stmt|;
 name|System
@@ -1945,10 +1933,6 @@ argument_list|,
 name|bufferIn
 operator|.
 name|length
-operator|-
-name|bufferIn
-operator|.
-name|offset
 argument_list|)
 expr_stmt|;
 name|this
@@ -2535,10 +2519,6 @@ operator|<
 name|bufferIn
 operator|.
 name|length
-operator|-
-name|bufferIn
-operator|.
-name|offset
 condition|)
 block|{
 name|buffer
@@ -2552,10 +2532,6 @@ argument_list|,
 name|bufferIn
 operator|.
 name|length
-operator|-
-name|bufferIn
-operator|.
-name|offset
 argument_list|)
 expr_stmt|;
 block|}
@@ -2595,10 +2571,6 @@ argument_list|,
 name|bufferIn
 operator|.
 name|length
-operator|-
-name|bufferIn
-operator|.
-name|offset
 argument_list|)
 expr_stmt|;
 name|this
@@ -3201,6 +3173,15 @@ name|BytesRef
 argument_list|>
 name|current
 decl_stmt|;
+DECL|field|postingsSpare
+specifier|private
+name|BytesRef
+name|postingsSpare
+init|=
+operator|new
+name|BytesRef
+argument_list|()
+decl_stmt|;
 DECL|method|FSTTermsEnum
 specifier|public
 name|FSTTermsEnum
@@ -3255,7 +3236,11 @@ name|output
 operator|.
 name|bytes
 argument_list|,
-literal|0
+name|current
+operator|.
+name|output
+operator|.
+name|offset
 argument_list|,
 name|current
 operator|.
@@ -3301,9 +3286,17 @@ operator|-
 literal|1
 expr_stmt|;
 block|}
+name|postingsSpare
+operator|.
+name|bytes
+operator|=
 name|current
 operator|.
 name|output
+operator|.
+name|bytes
+expr_stmt|;
+name|postingsSpare
 operator|.
 name|offset
 operator|=
@@ -3311,6 +3304,29 @@ name|buffer
 operator|.
 name|getPosition
 argument_list|()
+expr_stmt|;
+name|postingsSpare
+operator|.
+name|length
+operator|=
+name|current
+operator|.
+name|output
+operator|.
+name|length
+operator|-
+operator|(
+name|buffer
+operator|.
+name|getPosition
+argument_list|()
+operator|-
+name|current
+operator|.
+name|output
+operator|.
+name|offset
+operator|)
 expr_stmt|;
 comment|//System.out.println("  df=" + docFreq + " totTF=" + totalTermFreq + " offset=" + buffer.getPosition() + " len=" + current.output.length);
 name|didDecode
@@ -3533,9 +3549,9 @@ name|docsEnum
 operator|.
 name|reset
 argument_list|(
-name|current
+name|this
 operator|.
-name|output
+name|postingsSpare
 argument_list|,
 name|liveDocs
 argument_list|,
@@ -3678,9 +3694,7 @@ name|docsAndPositionsEnum
 operator|.
 name|reset
 argument_list|(
-name|current
-operator|.
-name|output
+name|postingsSpare
 argument_list|,
 name|liveDocs
 argument_list|,
