@@ -737,6 +737,16 @@ argument_list|>
 name|cachedRootArcs
 index|[]
 decl_stmt|;
+DECL|field|assertingCachedRootArcs
+specifier|private
+name|Arc
+argument_list|<
+name|T
+argument_list|>
+name|assertingCachedRootArcs
+index|[]
+decl_stmt|;
+comment|// only set wit assert
 comment|/** Represents a single arc. */
 DECL|class|Arc
 specifier|public
@@ -1827,6 +1837,37 @@ index|[
 literal|0x80
 index|]
 expr_stmt|;
+name|readRootArcs
+argument_list|(
+name|cachedRootArcs
+argument_list|)
+expr_stmt|;
+assert|assert
+name|setAssertingRootArcs
+argument_list|(
+name|cachedRootArcs
+argument_list|)
+assert|;
+assert|assert
+name|assertRootArcs
+argument_list|()
+assert|;
+block|}
+DECL|method|readRootArcs
+specifier|public
+name|void
+name|readRootArcs
+parameter_list|(
+name|Arc
+argument_list|<
+name|T
+argument_list|>
+index|[]
+name|arcs
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 specifier|final
 name|Arc
 argument_list|<
@@ -1895,7 +1936,7 @@ operator|.
 name|length
 condition|)
 block|{
-name|cachedRootArcs
+name|arcs
 index|[
 name|arc
 operator|.
@@ -1938,6 +1979,243 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+block|{
+literal|"rawtypes"
+block|,
+literal|"unchecked"
+block|}
+argument_list|)
+DECL|method|setAssertingRootArcs
+specifier|private
+name|boolean
+name|setAssertingRootArcs
+parameter_list|(
+name|Arc
+argument_list|<
+name|T
+argument_list|>
+index|[]
+name|arcs
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|assertingCachedRootArcs
+operator|=
+operator|(
+name|Arc
+argument_list|<
+name|T
+argument_list|>
+index|[]
+operator|)
+operator|new
+name|Arc
+index|[
+name|arcs
+operator|.
+name|length
+index|]
+expr_stmt|;
+name|readRootArcs
+argument_list|(
+name|assertingCachedRootArcs
+argument_list|)
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+DECL|method|assertRootArcs
+specifier|private
+name|boolean
+name|assertRootArcs
+parameter_list|()
+block|{
+assert|assert
+name|cachedRootArcs
+operator|!=
+literal|null
+assert|;
+assert|assert
+name|assertingCachedRootArcs
+operator|!=
+literal|null
+assert|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|cachedRootArcs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+specifier|final
+name|Arc
+argument_list|<
+name|T
+argument_list|>
+name|root
+init|=
+name|cachedRootArcs
+index|[
+name|i
+index|]
+decl_stmt|;
+specifier|final
+name|Arc
+argument_list|<
+name|T
+argument_list|>
+name|asserting
+init|=
+name|assertingCachedRootArcs
+index|[
+name|i
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|root
+operator|!=
+literal|null
+condition|)
+block|{
+assert|assert
+name|root
+operator|.
+name|arcIdx
+operator|==
+name|asserting
+operator|.
+name|arcIdx
+assert|;
+assert|assert
+name|root
+operator|.
+name|bytesPerArc
+operator|==
+name|asserting
+operator|.
+name|bytesPerArc
+assert|;
+assert|assert
+name|root
+operator|.
+name|flags
+operator|==
+name|asserting
+operator|.
+name|flags
+assert|;
+assert|assert
+name|root
+operator|.
+name|label
+operator|==
+name|asserting
+operator|.
+name|label
+assert|;
+assert|assert
+name|root
+operator|.
+name|nextArc
+operator|==
+name|asserting
+operator|.
+name|nextArc
+assert|;
+assert|assert
+name|root
+operator|.
+name|nextFinalOutput
+operator|.
+name|equals
+argument_list|(
+name|asserting
+operator|.
+name|nextFinalOutput
+argument_list|)
+assert|;
+assert|assert
+name|root
+operator|.
+name|node
+operator|==
+name|asserting
+operator|.
+name|node
+assert|;
+assert|assert
+name|root
+operator|.
+name|numArcs
+operator|==
+name|asserting
+operator|.
+name|numArcs
+assert|;
+assert|assert
+name|root
+operator|.
+name|output
+operator|.
+name|equals
+argument_list|(
+name|asserting
+operator|.
+name|output
+argument_list|)
+assert|;
+assert|assert
+name|root
+operator|.
+name|posArcsStart
+operator|==
+name|asserting
+operator|.
+name|posArcsStart
+assert|;
+assert|assert
+name|root
+operator|.
+name|target
+operator|==
+name|asserting
+operator|.
+name|target
+assert|;
+block|}
+else|else
+block|{
+assert|assert
+name|root
+operator|==
+literal|null
+operator|&&
+name|asserting
+operator|==
+literal|null
+assert|;
+block|}
+block|}
+return|return
+literal|true
+return|;
 block|}
 DECL|method|getEmptyOutput
 specifier|public
@@ -5088,9 +5366,8 @@ throws|throws
 name|IOException
 block|{
 assert|assert
-name|cachedRootArcs
-operator|!=
-literal|null
+name|assertRootArcs
+argument_list|()
 assert|;
 if|if
 condition|(
@@ -5210,7 +5487,7 @@ literal|null
 condition|)
 block|{
 return|return
-name|result
+literal|null
 return|;
 block|}
 else|else
