@@ -110,6 +110,10 @@ Bug Fixes
 * LUCENE-5151: Associations FacetsAggregators could enter an infinite loop when
   some result documents were missing category associations. (Shai Erera)
 
+* LUCENE-5152: Fix MemoryPostingsFormat to not modify borrowed BytesRef from FSTEnum
+  seek/lookup which can cause sideeffects if done on a cached FST root arc.
+  (Simon Willnauer)
+
 API Changes
 
 * LUCENE-5094: Add ramBytesUsed() to MultiDocValues.OrdinalMap.
